# fenn

./: .gitignore  CMakeLists.txt  LICENCE  README.md
src/cli/: main.c
src/core/: fbuffer.h  fstring.h  ftuple.c  ftuple.h  gc.c  gc.h  parser.c  parser.h  tuple.c  util.c  util.h
src/core/objects/: fbuffer.c  fstring.c
src/include/: config.h  fenn.h
